[package]
name = "bst-rs"
version = "0.1.0"
edition = "2021"
authors = ["Goudham Suresh <sgoudham@gmail.com>"]
description = "A simple BST implementation within Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sgoudham/bst-rs"
keywords = ["bst", "algorithms", "data-structures", "structure", "tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bst_rs"

[dependencies]